# SLICsupervoxels

./: CMakeLists.txt  README.md  demo.py  pysvx.h  setup.py
src/: .CMakeLists.txt.swp  CMakeLists.txt  MANIFEST.in  demo.py  helperNP.h  setup.py.in  slicSupervoxel.cpp  slicsupervoxel.h  svx.cpp
